--- a/views/layout.slim
+++ b/views/layout.slim
@@ -18,16 +18,15 @@ html
         == yield
         .footer-push
     footer
-      .container
-        .row
-          .col-sm-6
+      .container.text-center
+        ul.list-inline
+          li
             span
               ' &copy; 2013 and above
-              strong< Shogun
-          .col-sm-6.text-right.links
             a href="http://github.com/ShogunPanda"
               i.icon-github
               | ShogunPanda
+          li
             a href="http://cowtech.it"
               i.icon-globe
               | http://cowtech.it
@@ -35,9 +34,9 @@ html
               i.icon-envelope
               | shogun@cowtech.it
 
-    div.ribbon.ribbon-top-right
+    div.ribbon.ribbon-top-right.visible-md.visible-lg
       a href="http://github.com/ShogunPanda/cummar" target="_blank": span Fork me on GitHub
 
-    div.ribbon.ribbon-bottom-right.italy
+    div.ribbon.ribbon-bottom-right.italy.visible-md.visible-lg
       a href="http://www.italia.it" target="_blank": span Made by a proud Italian
 
