--- a/views/style.scss
+++ b/views/style.scss
@@ -26,57 +26,57 @@ h1, h2, h3, h4, h5, h6, a, p, strong, em {
   font-family: Ubuntu, serif;
 }
 
-article.root {
+article.root{
   min-height: 100%;
-  margin-bottom: -50px;
+  margin-bottom: -5rem;
 }
 
 .footer-push {
-  margin-top: 50px;
-  height: 50px;
+  margin-top: 4rem;
+  height: 4rem;
 }
 
 .page-header{
-  margin-top: 0px;
+  margin-top: 0;
 
   h1{
     font-weight: bold;
   }
 
   a.btn {
-    margin-top: 25px;
+    margin-top: 2.3rem;
   }
 }
 
 footer {
-  height: 50px;
+  height: 4rem;
 
   .container{
     border-top: 1px solid #CCC;
-    padding-top: 10px;
+    padding-top: 1rem;
   }
 
-  .links{
-    a{
-      margin-left: 3em;
+  span, a{
+    margin: 0 0 0.8rem 1rem;
+    position: relative;
+    white-space: nowrap;
+    display: inline-block;
+
+    i{
+      @include opacity(0.5);
+      @include transition(opacity 0.3s ease);
+      color: #333;
+      padding: 0 0.1rem 0 1rem;
+      font-size: 1.8rem;
       position: relative;
+      top: 0.05rem;
+      left: -0.2rem;
+    }
 
+    &:hover{
       i{
-        @include opacity(0.5);
-        @include transition(opacity 0.3s ease);
-        color: #333;
-        padding-right: 10px;
-        font-size: 1.3em;
-        position: absolute;
-        top: -0.05em;
-        left: -1.4em;
-      }
-
-      &:hover{
-        i{
-          text-decoration: none;
-          @include opacity(1);
-        }
+        text-decoration: none;
+        @include opacity(1);
       }
     }
   }
@@ -85,10 +85,6 @@ footer {
 .muted{
   color: #999;
   font-style: italic;
-}
-
-small{
-  margin-top: 3px;
 }
 
 .alert{
@@ -102,6 +98,10 @@ small{
     h3, h4{
       margin: 0;
     }
+
+    small{
+      padding-top: 0.3rem;
+    }
   }
 
   .panel-body{
@@ -111,7 +111,7 @@ small{
 
     .btn{
       position: relative;
-      top: -2px;
+      top: -0.2rem;
     }
   }
 }
@@ -124,14 +124,14 @@ a.social{
   text-decoration: none;
   color: #10749B;
   display: inline-block;
-  width: 150px;
-  height: 150px;
+  width: 15rem;
+  height: 15rem;
   padding: 0px;
-  margin: 20px;
+  margin: 1rem;
   font-size: 10rem;
 
   &:hover{
-    background-color: #10749B;
+    background-color: #428BCA;
     color: white;
     border-color: #0B516D;
     @include opacity(1);
@@ -141,26 +141,26 @@ a.social{
 .contacts-container{
   border: 2px solid #EEE;
   @include border-radius(5px);
-  padding: 10px;
-  margin-bottom: 20px;
-  min-height: 200px;
-  max-height: 500px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  min-height: 10rem;
+  max-height: 43rem;
   overflow-x: hidden;
   overflow-y: auto;
 }
 
 button, .input-group{
-  margin-top: 15px;
+  margin-top: 1.5rem;
 
   span.input-group-addon{
     background-color: transparent;
     color: #999;
-    padding: 6px 0 6px 6px;
+    padding: 0.6rem 0 0.6rem 0.6rem;
   }
 
   input{
     border-left: 0;
-    padding-left: 6px;
+    padding-left: 0.6rem;
 
     &:focus{
       outline-style: none;
@@ -173,8 +173,8 @@ button, .input-group{
 .contact{
   border: 2px solid #EEE;
   @include border-radius(5px);
-  padding: 20px;
-  margin: 10px;
+  padding: 2rem;
+  margin: 1rem;
   background-color: #F9F9F9;
   position: relative;
   z-index: 1;
@@ -185,7 +185,7 @@ button, .input-group{
 
   h4{
     font-weight: bold;
-    margin-top: 4px;
+    margin-top: 0.5rem;
   }
 
   em{
@@ -202,11 +202,11 @@ button, .input-group{
   p{
     text-align: right;
     font-size: 1.1rem;
-    margin: 3px 0 0 0;
+    margin: 0.5rem 0 0 0;
   }
 
   hr{
-    margin: 5px 0;
+    margin: 0.5rem 0;
   }
 
   .thumbnail-container{
@@ -225,7 +225,7 @@ button, .input-group{
       display: inline-block;
       width: 20px;
       height: 20px;
-      font-size: 16px;
+      font-size: 1.6rem;
       position: absolute;
       bottom: 5px;
       right: 5px;
@@ -239,18 +239,18 @@ button, .input-group{
   }
 
   .update-container{
-    min-height: 100px;
+    min-height: 10rem;
     border: 2px dashed #CCC;
     border-radius: 5px;
     background-color: #FFF;
-    margin: 10px 0;
+    margin: 1rem 0;
     position: relative;
 
     span{
       color: #999;
       font-size: 1.1rem;
       text-align: center;
-      padding-top: 20px;
+      padding-top: 4rem;
       display: block;
       position: absolute;
       top: 0;
@@ -279,15 +279,15 @@ button, .input-group{
     white-space: nowrap;
     padding: 1px;
     background-color: #A00;
-    @include box-shadow(0 0 0.5em #888);
-    @include text-shadow(0 0 0.5em #444);
+    @include box-shadow(0 0 0.5rem #888);
+    @include text-shadow(0 0 0.5rem #444);
 
     span{
       border: 1px dashed white;
       border-left: 0;
       border-right: 0;
-      padding: 0.25em 0;
-      font-size: 0.85em;
+      padding: 0.25rem 0;
+      font-size: 1.2rem;
       display: block;
       height: 100%;
       @include box-sizing(border-box);
